--- a/admin/Tpl/default/Index/footer.html
+++ b/admin/Tpl/default/Index/footer.html
@@ -40,6 +40,8 @@
 
     var definde_session_status = "<{$Think.session.status}>";
 
+    var define_type = "<{$Think.get.type}>";  //当前page值
+
     var define_page = "<{$Think.get.page}>";  //当前page值
 
     var define_pid = "<{$Think.get.pid|default=0}>";  //当前pid值
