--- a/admin/Tpl/default/Index/left.html
+++ b/admin/Tpl/default/Index/left.html
@@ -13,7 +13,7 @@
                             <a id="Left-System" class="top-action" href="__APP__/System/configuration">系统配置</a>
                         </li>
 
-                        <li>
+                 <!--        <li>
                             <a  id="Left-SystemAnnouncement" class="top-action" href="__APP__/SystemAnnouncement/index">系统公告</a>
                         </li>
 
@@ -27,7 +27,7 @@
 
                         <li>
                             <a  id="Left-OtherLinks" class="top-action" href="__APP__/OtherLinks/index">资质许可</a>
-                        </li>
+                        </li> -->
                         
                         <li>
                             <a  id="Left-Stylist" class="top-action" href="__APP__/Stylist/index">设计师</a>
@@ -35,19 +35,21 @@
 
                          <li><a  class="set-index-commodity" type="member" class="top-action" href="javascript:;">个人中心页-推荐</a></li>
                         <li><a  class="set-index-commodity" type="cart" class="top-action" href="javascript:;">购物车页-推荐</a></li>
-
+                        <li>
+                            <a  id="Left-Evaluate" class="top-action" href="__APP__/Evaluate/index">评价建议</a>
+                        </li>
                     </ul>
 
                 </li>
 
-                <li>
+                <!-- <li>
                     <a class="xnfy520_left_title" href="javascript:;">广告管理</a>
 
                     <ul>
                         <li><a  id="Left-AdvertCategory" class="top-action" href="__APP__/AdvertCategory/index">广告分类</a></li>
                         <li><a  id="Left-AdvertList" class="top-action" href="__APP__/AdvertList/index">广告列表</a></li>
                     </ul>
-                </li>
+                </li> -->
 
                 <li>
                     <a class="xnfy520_left_title" href="javascript:;">区域管理</a>
@@ -124,9 +126,10 @@
                     <a class="xnfy520_left_title" href="javascript:;">订单管理</a>
                     <ul>
 
-                        <li>
-                            <a class="top-action" id="Left-OrderList" href="__APP__/OrderList/index">全部订单</a>
-                        </li>
+                        <li><a class="top-action" id="Left-OrderList1" href="__APP__/OrderList/index/type/1">商品订单</a></li>
+                        <li><a class="top-action" id="Left-OrderList2" href="__APP__/OrderList/index/type/2">团购订单</a></li>
+                        <li><a class="top-action" id="Left-OrderList3" href="__APP__/OrderList/index/type/3">投票订单</a></li>
+                        <li><a class="top-action" id="Left-OrderList4" href="__APP__/OrderList/index/type/4">预订订单</a></li>
                     </ul>
                 </li>
 
