--- a/admin/Tpl/default/VoteCommodity/ajax_page_index.html
+++ b/admin/Tpl/default/VoteCommodity/ajax_page_index.html
@@ -7,10 +7,12 @@
                     <th id="xnfy520-function-index-table-th-name">商品名称</th>
                     <th class="xnfy520-function-index-table-th-50">描述</th>
                     <th class="xnfy520-function-index-table-th-50">上架</th>
-                    <th class="xnfy520-function-index-table-th-50">推荐</th>
+                    <!-- <th class="xnfy520-function-index-table-th-50">推荐</th> -->
                     <th class="xnfy520-function-index-table-th-50">排序</th>
                     <th class="xnfy520-function-index-table-th-50">浏览</th>
                     <th class="xnfy520-function-index-table-th-50">售价</th>
+                    <th class="xnfy520-function-index-table-th-50">预订</th>
+                    <th class="xnfy520-function-index-table-th-50">销量</th>
                     <th class="xnfy520-function-index-table-th-time">截止日期</th>
                     <th id="xnfy520-function-index-table-th-check-all">
                         <input type="button" value="全选" />
@@ -19,7 +21,7 @@
                 </thead>
                 <tbody>
                 <empty name="list">
-                    <tr><td colspan="10" style="height:50px;">暂无数据</td></tr>
+                    <tr><td colspan="11" style="height:50px;">暂无数据</td></tr>
                     <else/>
                     <volist name="list" id="vo">
                         <tr>
@@ -44,14 +46,14 @@
                                 </eq>
                                 <span style="display: none;" data_on="确认下架此商品？" data_off="确认上架此商品？"></span>
                             </td>
-                            <td class="xnfy520-function-index-table-td-hover">
+                            <!-- <td class="xnfy520-function-index-table-td-hover">
                                 <eq name="vo.recommend" value="1">
                                     <span class="switch_status" by="<{$vo.id}>" type="recommend" value="<{$vo.recommend}>">是</span>
                                     <else/>
                                     <span class="switch_status" by="<{$vo.id}>" type="recommend" value="<{$vo.recommend}>">否</span>
                                 </eq>
                                 <span style="display: none;" data_on="确认取消推荐此商品？" data_off="确认推荐此商品？"></span>
-                            </td>
+                            </td> -->
                             <td>
                                 <{$vo.sort}>
                             </td>
@@ -60,6 +62,12 @@
                             </td>
                             <td>
                                 &#165; <{$vo.price}>
+                            </td>
+                             <td>
+                                <{$vo.subscribe_volume}>/<{$vo.subscribe}>
+                            </td>
+                            <td>
+                                <{$vo.sales_volume}>
                             </td>
                             <td><{$vo.expiration_date|date="Y-m-d",###}></td>
                             <td class="xnfy520-function-index-table-td-checkbox">
