--- a/admin/Tpl/default/VoteCommodity/edit.html
+++ b/admin/Tpl/default/VoteCommodity/edit.html
@@ -93,8 +93,8 @@
                 }
             </style>
             <li style="height: 25px;line-height: 25px;margin-bottom: 2px;">
-                <!-- <span class="switch_textarea" style="background: #546C83;color:white;">描述</span> -->
                 <span class="switch_textarea" style="background: #546C83;color:white;">简介</span>
+                <span class="switch_textarea" style="background: #ccc;color:#C61A69;">生产跟踪信息</span>
                 <button type="button" style="margin: 0;padding:5px 2px" id="Parameter">送货和退货</button>
                 <button type="button" style="margin: 0;padding:5px 2px" id="Parameter2">产品尺寸</button>
                 <button type="button" style="margin: 0;padding:5px 2px" id="Parameter3">产品详细信息</button>
@@ -116,8 +116,8 @@
             <li class="texli" style="margin-bottom: 10px;">
                 <textarea class="textareas" name="details" style="resize: none;position:absolute;visibility: hidden;float: left;"><{$data.details}></textarea>
             </li>
-            <li class="texli" style="margin-bottom: 10px;display: none;">
-                 <textarea class="description" name="description" style="resize: none;position:absolute;visibility: hidden;float: left;"><{$data.description}></textarea>
+            <li class="texli" style="margin-bottom: 10px;display:none">
+                 <textarea class="production_tracking" name="production_tracking" style="resize: none;position:absolute;visibility: hidden;float: left;"><{$data.production_tracking}></textarea>
             </li>
             <li>
                 <input style="margin-left: 0;" type="submit" name="" value="修改" />
@@ -158,7 +158,7 @@
 <script>
     var editor;
     KindEditor.ready(function(K) {
-        editor = K.create('.description', {
+        editor = K.create('.production_tracking', {
             newlineTag : 'br',
             resizeType : 1,
             allowPreviewEmoticons : false,
