--- a/home/Tpl/default/Cart/order_complete.html
+++ b/home/Tpl/default/Cart/order_complete.html
@@ -18,7 +18,7 @@
               </tr>
               <tr>
                 <td>&nbsp;</td>
-                <td height="30" align="left" valign="middle">◆您可以在“<a href="#">我的订单</a>”中查看订单状态或打印您的订单</td>
+                <td height="30" align="left" valign="middle">◆您可以在“<a href="__APP__/Member/<{$type}>">我的订单</a>”中查看订单状态或打印您的订单</td>
               </tr>
               <tr>
                 <td>&nbsp;</td>
