--- a/home/Tpl/default/Member/address.html
+++ b/home/Tpl/default/Member/address.html
@@ -2,7 +2,7 @@
 
     <div class="mid-xq">
     	<ul>
-        	<li class="xq-weizhi">首页 >> <span style="color:#666;">我的订单</span></li>
+        <li class="xq-weizhi">首页 >> <span style="color:#666;">个人中心</span> >> <span style="color:#666;">收货地址管理</span></li>
 
 
       <include file="Member:left" />
