--- a/home/Tpl/default/Member/left.html
+++ b/home/Tpl/default/Member/left.html
@@ -1,10 +1,11 @@
-            <li class="xq-grzx">
+            <li class="xq-grzx" style="height:auto;">
             	<div>
                 	<ul id="check_menu_now">
 						<li class="grzx"><a>个人中心</a></li>
                         <li><a class="xq-nemu1 xq-bac1">订单中心</a></li>
-                        <li><a  class="xq-nemu xq-now" href="__APP__/Member/commodityOrder">商品订单</a></li>
+                        <li><a  class="xq-nemu" href="__APP__/Member/commodityOrder">商品订单</a></li>
                         <li><a  class="xq-nemu" href="__APP__/Member/grouponOrder">团购订单</a></li>
+                        <li><a  class="xq-nemu" href="__APP__/Member/votesOrder">投票订单</a></li>
                         <li><a  class="xq-nemu" href="__APP__/Member/voteOrder">预定订单</a></li>
                         <li><a  class="xq-nemu1 xq-bac2">个人账户</a></li>
                         <li><a  class="xq-nemu" href="__APP__/Cart">我的购物车</a></li>
@@ -14,6 +15,7 @@
                         <li><a  class="xq-nemu" href="__APP__/Member/password">密码修改</a></li>
                         <li><a  class="xq-nemu1 xq-bac3">客户服务</a></li>
                         <li><a  class="xq-nemu" href="__APP__/Member/message">消息提醒</a></li>
+                        <li><a  class="xq-nemu" href="__APP__/Member/production_tracking">生产跟踪</a></li>
                         <li><a  class="xq-nemu" href="__APP__/Member/suggest">网站评价建议</a></li>
                     </ul>
                 </div>
