--- a/home/Tpl/default/Member/password.html
+++ b/home/Tpl/default/Member/password.html
@@ -1,7 +1,7 @@
 <layout name='layout'/>
 <div class="mid-xq">
     	<ul>
-        	<li class="xq-weizhi">首页 >> <span style="color:#666;">沙发</span></li>
+        	<li class="xq-weizhi">首页 >> <span style="color:#666;">个人中心</span></li>
 
 			<include file="Member:left" />
 
