--- a/home/Tpl/default/Member/coupon.html
+++ b/home/Tpl/default/Member/coupon.html
@@ -2,7 +2,7 @@
 
     <div class="mid-xq">
     	<ul>
-        	<li class="xq-weizhi">首页 >> <span style="color:#666;">沙发</span></li>
+        	<li class="xq-weizhi">首页 >> <span style="color:#666;">个人中心</span></li>
 
 			<include file="Member:left" />
 
